<resources>
    <string name="app_name">BikeRidingGame</string>
    <string name="ranking_icon_menu_label">Ranking</string>
    <string name="game_instruction_menu_label">Game instruction</string>
    <string name="about_menu_label">About</string>
    <string name="home_menu_label">Home</string>
    <string name="exit_menu_label">Exit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exit_confirm_label">Do you really want to exit ?</string>
    <string name="play_btn">PLAY</string>
    <string name="about_game_text">Put your helmet on, pass obstacles and</string>
    <string name="go_get_some">GO GET SOME !</string>
    <string name="author_text">Author: Łukasz Gajerski</string>
    <string name="other_projects_text">You can find my other projects on my GitHub repository:</string>
    <string name="github_link">www.github.com/Ukasz09</string>
    <string name="game_control_header">GAME CONTROL</string>
    <string name="move_up_instruction_text">Dynamically move your phone up to make a jump. Don\'t forget to use phone rotations as well</string>
    <string name="rotate_instruction_text">Slightly rotate phone to control the acceleration, deceleration, and your tilt</string>
    <string name="game_ranking_header">GAME RANKING</string>
    <string name="data_fetching_error_text">Data fetching error</string>
    <string name="choose_nick_text">Choose your nick:</string>
    <string name="nick_placeholder">Your nick </string>
    <string name="incorrect_nick_text">Incorrect nick</string>
    <string name="choose_logo_text">Choose your logo:</string>
    <string name="unknown_nick">unknown_nick</string>
</resources>